--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -59,5 +59,5 @@ kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 googleServices = { id = "com.google.gms.google-services", version.ref = "service"}
 crashlytics = {id = "com.google.firebase.crashlytics", version.ref = "crashlytics"}
-dagger.hilt.android.plugin = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
+dagger-hilt-android = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
 
